src/app/routes/files/components/file-viewer/file-viewer.component.scss
:host {
  box-sizing: border-box;
  position: relative;

  flex: 1 0 0;
  display: flex;
  flex-direction: column;
}

.file-viewer-container {
  margin: 0 5px 5px 5px;
  border-radius: 0 0 7px 7px;
  padding: 20px 10px 20px 20px;
  background: #F3F3F3;
  position: relative;
  max-height: calc(100% - 85px);
  flex: 1 0 0;
  box-shadow: inset 0 0 10px 2px #303030;

  color: black;
  display: flex;
  flex-direction: column;
}

.file-content {
  width: 100%;
  display: flex;
  flex-flow: row wrap;
}

.showdown-wrapper {
  width: calc(100% - 280px);
  display: flex;
  flex-flow: row wrap;

  padding: 53px 65px;
  max-width: 900px;
  border-radius: 9px;
  background-color: #fff;
  box-shadow: 1px 1px 5px 0 rgba(0,0,0,0.15);
  margin: 60px auto 20px auto;
}

:host::ng-deep h1 {
  font-size: 32px;

  padding-bottom: 3px;
  border-bottom: 3px solid #c2185b;
}

:host::ng-deep table {
  border-spacing: 0;
  border-collapse: collapse;
  background-color: #fff;

  & th, td {
    padding: 6px 13px;
    border: 1px solid #dfe2e5;
  }

  & tr:nth-child(2n) {
    background-color: #f6f8fa;
  }

}

